# biomed-research

./: .gitignore  CODE_REVIEW.md  CONTRIBUTING.md  FIXES_APPLIED.md  LICENSE  LIMITATIONS.md  README.md  REPRODUCIBILITY_RUNBOOK.md  environment.yml  paper.bib  paper.md  paper.tex  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: pipeline.algonauts.yaml  pipeline.cneuromod_isc.yaml  pipeline.ds007318.yaml  pipeline.example.yaml  pipeline.local.template.yaml  pipeline.yaml  reproducibility.yaml  reproducibility_real.yaml  sensitivity.yaml
data/repro_inputs/: prep_manifest.json
docs/: IMPLEMENTATION_RUNBOOK.md  PROJECT_OVERVIEW.md  SCENE_ANNOTATION_SCHEMA.md  SOFTWARE_ARCHITECTURE.md
docs/baseline/: VERSIONS.md  data_inventory_template.csv  git_head.txt
reports/: fc_fingerprint_result.txt  fc_fingerprint_values.csv
reports/reproducibility/: .gitkeep  dfc_sensitivity.json  dfc_sensitivity_ari.csv  dfc_sensitivity_per_window.csv  fc_within_vs_between.csv  fc_within_vs_between.json  graph_metrics_bootstrap.csv  ica_stability_lorocv.csv  ica_stability_lorocv.json  ica_stability_lorocv_pairwise.csv  ica_stability_lorocv_per_component.csv  ica_stability_seeds.csv  ica_stability_seeds.json  ica_stability_seeds_pairwise.csv  ica_stability_seeds_per_component.csv  manifest.json  network_anchor.json  network_anchor_block_means.csv  network_anchor_label_order.csv  (+8 more)
scripts/: build_scorecard.py  data_inventory.py  fc_fingerprint.py  fc_matrix_figure.py  ica_label_components.py  organize_schizconnect.py  prep_reproducibility_inputs.py  reho_regional_profile.py  run_all_reproducibility.sh  run_dfc_sensitivity.py  run_fmriprep_pilot.py  run_ica_stability.py  run_isc_extension.py  run_network_anchor.py  run_pipeline.py  run_reho_stability.py  run_reproducibility.py  run_sensitivity_analysis.py  run_sensitivity_on_mac.sh  run_step.py
tests/: test_config_and_utils.py  test_connectivity.py  test_dfc_sensitivity.py  test_fc_reproducibility.py  test_graph_stability.py  test_ica_stability.py  test_isc.py  test_network_anchor.py  test_pca_and_roi.py  test_preprocessing.py  test_reho_stability.py  test_run_reproducibility.py  test_sanity.py  test_scene_annotation.py  test_scorecard.py  test_sensitivity.py  test_stats.py  test_viz_and_reho.py
(+52 files in other folders)
