[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmri-pipeline"
version = "0.1.0"
description = "A modular, YAML-configured pipeline for multi-scale functional brain network analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Sara Pradhan"}
]
keywords = ["fMRI", "neuroimaging", "functional connectivity", "reproducibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pybids>=0.16.0",
    "nibabel>=3.0.0",
    "nilearn>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.6.0",
    "pyyaml>=6.0.0",
    "joblib>=1.2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
